src/test/deca/syntax/valid/created/read.deca
// Description :
//    les read, normalement à ce stade pas besoin d'interaction
//
// Resultats :
//		Ok

{
int a = readInt();
float b = readFloat();
}