src/test/deca/syntax/invalid/created/miscellaneous/infinite_int.deca
// Description :
//    test d'un int infinite
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 9:  int trop grand

{
int a = -200000000000000000000000000000000000000000000000000000000000000000000000000000000000000000;
}